crates/excalidraw-mermaid/tests/snapshots/excalidraw@flowchart_shapes.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Mermaid → Excalidraw JSON for flowchart_shapes.mmd
expression: json
---
{
  "type": "excalidraw",
  "version": 2,
  "source": "excalidraw-mermaid:flowchart-v2",
  "elements": [
    {
      "type": "rectangle",
      "id": "mm-flow-node-A",
      "x": 8.0,
      "y": 39.15625,
      "width": 130.296875,
      "height": 54.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-A",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_A_B_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-A",
      "x": 8.0,
      "y": 39.15625,
      "width": 130.296875,
      "height": 54.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Rectangle",
      "originalText": "Rectangle",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-A"
    },
    {
      "type": "rectangle",
      "id": "mm-flow-node-B",
      "x": 188.296875,
      "y": 39.15625,
      "width": 91.296875,
      "height": 54.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-B",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_A_B_0",
          "type": "arrow"
        },
        {
          "id": "mm-flow-edge-L_B_C_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-B",
      "x": 188.296875,
      "y": 39.15625,
      "width": 91.296875,
      "height": 54.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Rounded",
      "originalText": "Rounded",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-B"
    },
    {
      "type": "diamond",
      "id": "mm-flow-node-C",
      "x": 329.59375,
      "y": 8.0,
      "width": 116.3125,
      "height": 116.3125,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#fff4e6",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-C",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_B_C_0",
          "type": "arrow"
        },
        {
          "id": "mm-flow-edge-L_C_D_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-C",
      "x": 329.59375,
      "y": 8.0,
      "width": 116.3125,
      "height": 116.3125,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Diamond",
      "originalText": "Diamond",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-C"
    },
    {
      "type": "ellipse",
      "id": "mm-flow-node-D",
      "x": 495.90625,
      "y": 46.65625,
      "width": 82.68309020996094,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-D",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_C_D_0",
          "type": "arrow"
        },
        {
          "id": "mm-flow-edge-L_D_E_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-D",
      "x": 495.90625,
      "y": 46.65625,
      "width": 82.68309020996094,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Stadium",
      "originalText": "Stadium",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-D"
    },
    {
      "type": "ellipse",
      "id": "mm-flow-node-E",
      "x": 628.5893402099609,
      "y": 37.796875,
      "width": 56.71875,
      "height": 56.71875,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-E",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_D_E_0",
          "type": "arrow"
        },
        {
          "id": "mm-flow-edge-L_E_F_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-E",
      "x": 628.5893402099609,
      "y": 37.796875,
      "width": 56.71875,
      "height": 56.71875,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Circle",
      "originalText": "Circle",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-E"
    },
    {
      "type": "rectangle",
      "id": "mm-flow-node-F",
      "x": 735.3080902099609,
      "y": 46.65625,
      "width": 108.265625,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-F",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_E_F_0",
          "type": "arrow"
        },
        {
          "id": "mm-flow-edge-L_F_G_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false,
      "roundness": {
        "type": 3
      }
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-F",
      "x": 735.3080902099609,
      "y": 46.65625,
      "width": 108.265625,
      "height": 40.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Subroutine",
      "originalText": "Subroutine",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-F"
    },
    {
      "type": "ellipse",
      "id": "mm-flow-node-G",
      "x": 893.5737152099609,
      "y": 31.96646499633789,
      "width": 80.5,
      "height": 68.37957000732422,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e7f5ff",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-flow-nodetext-G",
          "type": "text"
        },
        {
          "id": "mm-flow-edge-L_F_G_0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-flow-nodetext-G",
      "x": 893.5737152099609,
      "y": 31.96646499633789,
      "width": 80.5,
      "height": 68.37957000732422,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Database",
      "originalText": "Database",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-flow-node-G"
    },
    {
      "type": "arrow",
      "id": "mm-flow-edge-L_A_B_0",
      "x": 138.296875,
      "y": 66.15625,
      "width": 50.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          25.0,
          0.0
        ],
        [
          50.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-flow-node-A",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-flow-node-B",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-flow-edge-L_B_C_0",
      "x": 279.59375,
      "y": 66.15625,
      "width": 50.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          25.0,
          0.0
        ],
        [
          50.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-flow-node-B",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-flow-node-C",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-flow-edge-L_C_D_0",
      "x": 445.90625,
      "y": 66.15625,
      "width": 50.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          25.0,
          0.0
        ],
        [
          50.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-flow-node-C",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-flow-node-D",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-flow-edge-L_D_E_0",
      "x": 578.5893402099609,
      "y": 66.15625,
      "width": 50.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          25.0,
          0.0
        ],
        [
          50.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-flow-node-D",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-flow-node-E",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-flow-edge-L_E_F_0",
      "x": 685.3080902099609,
      "y": 66.15625,
      "width": 50.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          25.0,
          0.0
        ],
        [
          50.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-flow-node-E",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-flow-node-F",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-flow-edge-L_F_G_0",
      "x": 843.5737152099609,
      "y": 66.15625,
      "width": 50.0,
      "height": 0.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          25.0,
          0.0
        ],
        [
          50.0,
          0.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-flow-node-F",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-flow-node-G",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    }
  ],
  "appState": {
    "viewBackgroundColor": "#ffffff",
    "gridSize": 20,
    "theme": "light"
  },
  "files": {}
}
